--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "cross-request",
     "short_name": "cross-request",
     "description": "YApi 跨域请求扩展",
-    "version": "4.3.1",
+    "version": "4.4.5",
     "author": "leeguooooo",
     "homepage_url": "https://github.com/leeguooooo/cross-request-master",
     "action": {
@@ -41,7 +41,7 @@
     "content_scripts": [{
         "matches": ["http://*/*", "https://*/*"],
         "js": [
-            "response.js"
+            "content-script.js"
         ],
         "all_frames": true
     }]
