feat: 重构扩展架构并修复cURL弹窗功能
- 🔄 重构 Content Script 架构
  - 重新组织代码结构，创建独立的 content-script.js 文件
  - 保留完整的跨域请求处理功能
  - 整合 cURL 弹窗控制功能
  - 改进调试日志和错误处理机制

- 🐛 修复 cURL 弹窗相关问题
  - 修复永久关闭按钮无响应问题
  - 修复 Chrome runtime 消息传递错误
  - 修复消息端口关闭错误
  - 修复事件监听器丢失问题

- ✨ 新增功能
  - 添加永久关闭 cURL 弹窗选项
  - 在扩展弹窗中添加重新启用功能
  - 增强调试日志输出

- 🛠️ 技术改进
  - 优化消息通信架构：网页脚本 → DOM 事件 → content script → background script
  - 改进事件处理稳定性
  - 添加详细的错误处理和恢复机制

版本: v4.4.6

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,12 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to create release for (e.g., v4.4.6)'
+        required: true
+        type: string
 
 permissions:
   contents: write
