fix: rename __tests__ to tests for Chrome extension compatibility
Chrome extensions cannot load directories starting with underscore (_).
This was preventing the extension from loading in development.

Changes:
- Renamed __tests__/ to tests/
- Updated package.json Jest config with testMatch pattern
- Updated .eslintignore and .prettierignore

Tests still pass: 39/39 ✅

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ],
     "collectCoverageFrom": [
       "*.js",
       "!jquery-3.1.1.js"
