--- a/manifest.json
+++ b/manifest.json
@@ -1,48 +1,48 @@
 {
-    "manifest_version": 3,
-    "name": "cross-request",
-    "short_name": "cross-request",
-    "description": "YApi 跨域请求扩展",
-    "version": "4.4.13",
-    "author": "leeguooooo",
-    "homepage_url": "https://github.com/leeguooooo/cross-request-master",
-    "action": {
-        "default_icon": {
-            "16": "icons/icon-16.png",
-            "32": "icons/icon-32.png",
-            "48": "icons/icon-48.png",
-            "128": "icons/icon-128.png"
-        },
-        "default_popup": "popup.html"
+  "manifest_version": 3,
+  "name": "cross-request",
+  "short_name": "cross-request",
+  "description": "YApi 跨域请求扩展",
+  "version": "4.4.13",
+  "author": "leeguooooo",
+  "homepage_url": "https://github.com/leeguooooo/cross-request-master",
+  "action": {
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
     },
-    "icons": {
-        "16": "icons/icon-16.png",
-        "32": "icons/icon-32.png",
-        "48": "icons/icon-48.png",
-        "128": "icons/icon-128.png"
-    },
-    "permissions": [ 
-        "declarativeNetRequest",
-        "declarativeNetRequestWithHostAccess",
-        "storage",
-        "tabs",
-        "scripting"
-    ],
-    "host_permissions": [
-        "<all_urls>"
-    ],
-    "background": {
-        "service_worker": "background.js"
-    },
-    "web_accessible_resources": [{
-        "resources": ["index.js"],
-        "matches": ["<all_urls>"]
-    }],
-    "content_scripts": [{
-        "matches": ["http://*/*", "https://*/*"],
-        "js": [
-            "content-script.js"
-        ],
-        "all_frames": true
-    }]
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
+  "permissions": [
+    "declarativeNetRequest",
+    "declarativeNetRequestWithHostAccess",
+    "storage",
+    "tabs",
+    "scripting"
+  ],
+  "host_permissions": ["<all_urls>"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["index.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["content-script.js"],
+      "all_frames": true
+    }
+  ]
 }
