--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "cross-request",
-  "short_name": "cross-request",
-  "description": "YApi 跨域请求扩展",
+  "name": "Cross Request Master",
+  "short_name": "CrossRequest",
+  "description": "YApi 跨域请求扩展 - 开发者工具",
   "version": "4.4.13",
   "author": "leeguooooo",
   "homepage_url": "https://github.com/leeguooooo/cross-request-master",
