feat: v4.5.0 模块化重构 + 关键修复 (技术债清理完成)
**模块化架构** ✅:
- 提取 helpers 到独立模块 src/helpers/
  * query-string.js - buildQueryString 函数
  * body-parser.js - bodyToString 函数
- 测试导入真实生产代码，消除"虚假绿灯"风险
- 68 个测试全部通过，覆盖真实生产逻辑

**🔴 Critical Fixes** (Code Review 反馈):

1. **修复脚本加载竞态条件** (High Priority)
   - 问题: 动态注入脚本默认 async=true，index.js 可能在 helpers 之前执行
   - 后果: window.CrossRequestHelpers 未定义，扩展崩溃
   - 修复: 链式加载 + script.async = false 确保顺序
   - content-script.js 现在按顺序等待每个 helper 加载完成

2. **添加安全 Fallback Helpers** (High Priority)
   - 问题: helpers 加载失败时调用未定义函数导致 TypeError
   - 后果: 第一个 GET 请求就让扩展停止工作
   - 修复: index.js 提供内联 fallback 实现
   - 现在即使外部 helpers 加载失败，扩展仍能正常工作

**改进**:
- index.js 减少 60 行代码（删除重复的 helper 定义）
- 更清晰的职责分离：helpers vs 业务逻辑
- 单一数据源：helper 逻辑只在一处定义

**测试**:
- 68 个测试全部通过 ✅
- Lint: 0 errors ✅
- 测试现在导入真实 helpers，保证覆盖生产逻辑

**兼容性**:
- Chrome 扩展 Manifest V3 兼容
- IIFE 模式保持不变（非 ESM）
- 向后兼容：API 无变化

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Cross Request Master",
   "short_name": "CrossRequest",
   "description": "YApi 跨域请求扩展 - 开发者工具",
-  "version": "4.4.13",
+  "version": "4.5.0",
   "author": "leeguooooo",
   "homepage_url": "https://github.com/leeguooooo/cross-request-master",
   "action": {
@@ -34,7 +34,11 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["index.js"],
+      "resources": [
+        "src/helpers/query-string.js",
+        "src/helpers/body-parser.js",
+        "index.js"
+      ],
       "matches": ["<all_urls>"]
     }
   ],
