--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,7 @@
       "resources": [
         "src/helpers/query-string.js",
         "src/helpers/body-parser.js",
+        "src/helpers/logger.js",
         "index.js"
       ],
       "matches": ["<all_urls>"]
