重构测试以使用真实生产函数 - 真正的回归保护
核心改进:
- 提取 response 处理逻辑到 src/helpers/response-handler.js
- 导出 processBackgroundResponse 和 buildYapiCallbackParams 函数
- 测试现在调用真实的生产代码，而非重新实现逻辑

关键变化:
- 如果 processBackgroundResponse 停止解析 JSON，测试会失败
- 如果 buildYapiCallbackParams 改变参数结构，测试会失败
- 提供真正的回归保护，而非误报安全感

测试统计:
- 所有测试通过 (119/119)
- YApi context 测试: 16 个（全部使用生产函数）
- processBackgroundResponse: 3 个测试
- buildYapiCallbackParams: 2 个测试
- 完整集成流程: 3 个测试
- Issue #22 回归测试: 2 个（含回归保护测试）

技术债务清理:
- 消除测试中的代码重复
- 测试现在真正验证生产行为
- 更容易维护和理解

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Cross Request Master",
   "short_name": "CrossRequest",
   "description": "YApi 跨域请求扩展 - 开发者工具",
-  "version": "4.5.1",
+  "version": "4.5.2",
   "author": "leeguooooo",
   "homepage_url": "https://github.com/leeguooooo/cross-request-master",
   "action": {
@@ -38,6 +38,7 @@
         "src/helpers/query-string.js",
         "src/helpers/body-parser.js",
         "src/helpers/logger.js",
+        "src/helpers/response-handler.js",
         "index.js"
       ],
       "matches": ["<all_urls>"]
