禁用自动发布 release - 改为手动控制
修改内容:
1. auto-tag.yml: 禁用自动标签创建，改为 workflow_dispatch 手动触发
2. release.yml: 禁用自动 release 创建，改为 workflow_dispatch 手动触发

现在发布流程:
- 开发者手动更新 manifest.json 版本号
- 开发者手动运行 auto-tag workflow 创建标签
- 开发者手动运行 release workflow 创建 release

避免 CI 自动发布，给开发者完全控制权

--- a/.github/workflows/auto-tag.yml
+++ b/.github/workflows/auto-tag.yml
@@ -1,9 +1,18 @@
 name: Auto Tag on Version Change
 
+# 禁用自动标签创建 - 应该手动控制发布
+# on:
+#   push:
+#     branches: [ main ]
+#     paths: [ 'manifest.json' ]
+
 on:
-  push:
-    branches: [ main ]
-    paths: [ 'manifest.json' ]
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version to tag (e.g., 4.5.3)'
+        required: true
+        type: string
 
 permissions:
   contents: write
@@ -18,10 +27,10 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Get current version from manifest.json
+      - name: Get version from input
         id: version
         run: |
-          VERSION=$(jq -r '.version' manifest.json)
+          VERSION="${{ github.event.inputs.version }}"
           echo "current_version=$VERSION" >> $GITHUB_OUTPUT
           echo "tag_name=v$VERSION" >> $GITHUB_OUTPUT
           echo "当前版本: $VERSION"
