修复 ESLint 和 Prettier 配置冲突
问题: ESLint 和 Prettier 对 switch 语句缩进有冲突
- ESLint 期望 2 空格缩进
- Prettier 产生 4 空格缩进

解决方案:
1. 更新 ESLint 配置: 添加 SwitchCase: 1 选项
2. 手动修复 switch 语句缩进
3. 运行 eslint --fix 自动修复
4. 运行 prettier --write 格式化

结果:
- ✅ ESLint 通过 (只有 jquery-3.1.1.js 警告，正常)
- ✅ Prettier 通过
- ✅ 所有 119 个测试通过
- ✅ CI 应该通过所有检查

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "sourceType": "script"
   },
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single", { "avoidEscape": true }],
     "semi": ["error", "always"],
