chore: 更新 .gitignore 忽略临时文件，添加 Git hooks 和发布检查脚本

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ temp/
 key.pem
 extension.zip
 cross-request-store*.zip
+cross-request-master-v*.zip
+
+# Extracted extension files (temporary)
+extracted/
