--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint:fix": "eslint *.js --fix",
     "format": "prettier --write \"*.js\" \"*.json\" \"*.md\"",
     "format:check": "prettier --check \"*.js\" \"*.json\" \"*.md\"",
+    "hooks:install": "git config core.hooksPath .githooks",
+    "release:check": "node scripts/check-release.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
