--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Cross Request Master",
   "short_name": "CrossRequest",
   "description": "YApi 跨域请求扩展 - 开发者工具",
-  "version": "4.5.5",
+  "version": "4.5.6",
   "author": "leeguooooo",
   "homepage_url": "https://github.com/leeguooooo/cross-request-master",
   "action": {
@@ -37,6 +37,7 @@
       "resources": [
         "src/helpers/query-string.js",
         "src/helpers/body-parser.js",
+        "src/helpers/form-data.js",
         "src/helpers/logger.js",
         "src/helpers/response-handler.js",
         "index.js"
