--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "YApi 跨域请求扩展",
   "private": true,
   "types": "types/cross-request.d.ts",
+  "packageManager": "pnpm@10.7.1",
   "scripts": {
     "lint": "eslint *.js",
     "lint:fix": "eslint *.js --fix",
@@ -25,9 +26,11 @@
   "author": "leeguooooo",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^8.50.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "@eslint/js": "^9.39.1",
+    "eslint": "^9.39.1",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "globals": "^16.5.0",
     "prettier": "^3.0.0"
   },
   "jest": {
