--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "types/cross-request.d.ts",
   "packageManager": "pnpm@10.7.1",
   "scripts": {
+    "dev": "node scripts/dev.js",
     "lint": "eslint *.js",
     "lint:fix": "eslint *.js --fix",
     "format": "prettier --write \"*.js\" \"*.json\" \"*.md\"",
