--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Cross Request Master",
   "short_name": "CrossRequest",
   "description": "YApi 跨域请求扩展 - 开发者工具",
-  "version": "4.5.6",
+  "version": "4.5.7",
   "author": "leeguooooo",
   "homepage_url": "https://github.com/leeguooooo/cross-request-master",
   "action": {
@@ -22,11 +22,8 @@
     "128": "icons/icon-128.png"
   },
   "permissions": [
-    "declarativeNetRequest",
-    "declarativeNetRequestWithHostAccess",
     "storage",
-    "tabs",
-    "scripting"
+    "tabs"
   ],
   "host_permissions": ["<all_urls>"],
   "background": {
