--- a/packages/yapi-mcp/package.json
+++ b/packages/yapi-mcp/package.json
@@ -62,6 +62,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "markdown-it": "^14.1.0",
     "remeda": "^2.20.1",
     "yargs": "^17.7.2",
     "zod": "^3.24.2"
