--- a/packages/yapi-mcp/package.json
+++ b/packages/yapi-mcp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leeguoo/yapi-mcp",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "YApi Auto MCP Server - Model Context Protocol server for YApi integration, enables AI tools like Cursor to interact with YApi API documentation",
   "main": "dist/index.js",
   "bin": {
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.17.32",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
