--- a/packages/yapi-mcp/package.json
+++ b/packages/yapi-mcp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leeguoo/yapi-mcp",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "description": "YApi Auto MCP Server - Model Context Protocol server for YApi integration, enables AI tools like Cursor to interact with YApi API documentation",
   "main": "dist/index.js",
   "bin": {
@@ -10,7 +10,8 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "skill-template"
   ],
   "scripts": {
     "build": "tsc && tsc-alias",
